[package]
name = "microbit-bsp"
version = "0.2.0"
edition = "2021"
description = "An embassy-based boards support package (BSP) for BBC Micro:bit v2"

[workspace]

[dependencies]
embassy-nrf = { git="https://github.com/embassy-rs/embassy", default-features = false, features = ["nrf52833", "nfc-pins-as-gpio", "time-driver-rtc1", "gpiote"] }
embassy-time = { git="https://github.com/embassy-rs/embassy", default-features = false }
embassy-sync = { git="https://github.com/embassy-rs/embassy", default-features = false }
cortex-m = "0.7.7"
embedded-hal = "1.0.0-rc.3"
lsm303agr = "0.3.0"
defmt = "0.3.5"
futures = { version = "0.3.30", default-features = false }
