[package]
name = "microbit-async-ble-example"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp= { path = "../../" }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl", "defmt"] }

heapless = "0.8.0"
cortex-m-rt = "0.7.3"
static_cell = "2.0.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
