[package]
name = "microbit-async-display-example"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp= { path = "../../" }

embassy-futures = { version = "0.1.1", default-features = false }
embassy-executor = { version = "0.4.0", default-features = false, features = ["integrated-timers"] }
embassy-time = { version = "0.2.0", default-features = false }

cortex-m-rt = "0.7.3"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
