[package]
name = "microbit-async-display-example"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp= { path = "../../" }

embassy-futures = { git = "https://github.com/embassy-rs/embassy", default-features = false }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", default-features = false, features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }

cortex-m-rt = "0.7.3"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1" , features = ["print-defmt"] }
